force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>Time for every route on every stop.</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>