force-app/main/default/objects/Schedule__c/fields/BusRoute__c.field-meta.xml
<CustomField>
    <fullName>BusRoute__c</fullName>
    <label>Bus Route</label>
    <referenceTo>BusRoute__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>