force-app/main/default/objects/Schedule__c/fields/TimeToNextStop__c.field-meta.xml
<CustomField>
    <fullName>TimeToNextStop__c</fullName>
    <description>Time in minutes to the next stop in a route.</description>
    <label>Time To Next Stop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>